--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@
 REACT_APP_GEMINI_API_KEY=AIzaSyBJYuCpi86B7fnquLReShxjwcwMERvXPbc
 
 # Backend API Configuration
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://api.arabielle.com/
